tests/cases/invalid/var-in-if-block/example.mld
var @x = 1
if @x == 1 [
  var @y = 2
  show `y=@y`
]
